# ResumeOptimizer_1

./: .env  app.py  gradio_app.py  pyproject.toml  requirements.txt
src/resume_crew/: crew.py  models.py
src/resume_crew/config/: agents.yaml  tasks.yaml
